--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
                 <img src="Trip.png" alt="" />
                 <div class="cardall">
                   <div class="cardone">
-                    <p class="trip">Trip To Greece</p>
+                    <b class="trip">Trip To Greece</b>
                     <div class="cardone1">
-                      <p style="padding: 10px">14-29 <br />June</p>
+                      <p style="padding: 5px">14-29 <br />June</p>
                       <p class="cardone114"></p>
-                      <p style="padding: 10px">by Robbin joseph</p>
+                      <p style="padding: 5px">by Robbin joseph</p>
                     </div>
                     <div class="cardone2">
                       <img src="LEAF.png" alt="" />
@@ -182,9 +182,9 @@
                         <img src="Mask Group.png" alt="" />
                       </div>
                       <div class="cardtwo2">
-                        <p>Ongoing</p>
-                        <p>Trip to rome</p>
-                        <p>40% completed</p>
+                        <p style="color:rgba(132, 130, 154, 1)">Ongoing</p>
+                        <b>Trip to rome</b>
+                        <p><span style="color:rgba(138, 121, 223, 1)">40%</span> completed</p>
                         <img src="bar.png" alt="" />
                       </div>
                     </div>
